--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Fonts Icon -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
 
-    <!-- Fonts Family -->
+    <!-- Fonts Family --->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
