notification model design

--- a/index.html
+++ b/index.html
@@ -291,9 +291,79 @@
                   </li>
                   <li class="header-icons-div">
                     <a href="#">
-                      <div class="icon-box">
+                      <div class="icon-box dropdown-toggle" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="false">
                         <span class="material-symbols-outlined"> mail </span>
                       </div>
+                      <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                        <div class="notification-header">
+                            <h5 class="small-text unread-msg-batch">Messages</h5> 
+                            <h4 class="small-text">Mark all as read</h4>
+                        </div>
+                        <div class="notification-body notificaction-main-div">
+                          <div class="notofication-items">
+                            <div class="notification-img">
+                              <img src="image/user-img1.jpg">
+                            </div>
+                            <div class="notification-msg"> 
+                              <h4 class="title"> Gary Peters </h4>
+                              <p class="desc">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                              </p>
+                              <span class="date-time">
+                                Jul 07, 11:02 AM
+                              </span>
+                            </div>
+                          </div>
+                          <div class="notofication-items">
+                            <div class="notification-img">
+                              <img src="image/user-img2.png">
+                            </div>
+                            <div class="notification-msg"> 
+                              <h4 class="title"> Gary Peters </h4>
+                              <p class="desc">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                              </p>
+                              <span class="date-time">
+                                Jul 07, 11:02 AM
+                              </span>
+                            </div>
+                          </div>
+                          <div class="notofication-items">
+                            <div class="notification-img">
+                              <img src="image/user-img3.jpg">
+                            </div>
+                            <div class="notification-msg"> 
+                              <h4 class="title"> Gary Peters </h4>
+                              <p class="desc">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                              </p>
+                              <span class="date-time">
+                                Jul 07, 11:02 AM
+                              </span>
+                            </div>
+                          </div>
+                          <div class="notofication-items">
+                            <div class="notification-img">
+                              <img src="image/user-img4.png">
+                            </div>
+                            <div class="notification-msg"> 
+                              <h4 class="title"> Gary Peters </h4>
+                              <p class="desc">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                              </p>
+                              <span class="date-time">
+                                Jul 07, 11:02 AM
+                              </span>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="notification-footer">
+                          <h5 class="small-text text-center"> See All Notifications </h5>
+                      </div>
+                        <!-- <div class="notification-footer">
+                          <a href="#"> View All Notifications </a>
+                      </div> -->
+                    </div>
                     </a>
                   </li>
                   <li class="header-icons-div">
@@ -307,12 +377,82 @@
                   </li>
                   <li class="header-icons-div">
                     <a href="#">
-                      <div class="icon-box">
+                      <div class="icon-box dropdown-toggle" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="false">
                         <div class="notification-point pulse-effects"></div>
                         <span class="material-symbols-outlined">
                           notifications_active
                         </span>
                       </div>
+                      <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                        <div class="notification-header">
+                            <h5 class="small-text unread-msg-batch">Notifications</h5> 
+                            <h4 class="small-text">Mark all as read</h4>
+                        </div>
+                        <div class="notification-body notificaction-main-div">
+                          <div class="notofication-items">
+                            <div class="notification-img">
+                              <img src="image/user-img1.jpg">
+                            </div>
+                            <div class="notification-msg"> 
+                              <h4 class="title"> Gary Peters </h4>
+                              <p class="desc">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                              </p>
+                              <span class="date-time">
+                                Jul 07, 11:02 AM
+                              </span>
+                            </div>
+                          </div>
+                          <div class="notofication-items">
+                            <div class="notification-img">
+                              <img src="image/user-img1.jpg">
+                            </div>
+                            <div class="notification-msg"> 
+                              <h4 class="title"> Gary Peters </h4>
+                              <p class="desc">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                              </p>
+                              <span class="date-time">
+                                Jul 07, 11:02 AM
+                              </span>
+                            </div>
+                          </div>
+                          <div class="notofication-items">
+                            <div class="notification-img">
+                              <img src="image/user-img1.jpg">
+                            </div>
+                            <div class="notification-msg"> 
+                              <h4 class="title"> Gary Peters </h4>
+                              <p class="desc">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                              </p>
+                              <span class="date-time">
+                                Jul 07, 11:02 AM
+                              </span>
+                            </div>
+                          </div>
+                          <div class="notofication-items">
+                            <div class="notification-img">
+                              <img src="image/user-img1.jpg">
+                            </div>
+                            <div class="notification-msg"> 
+                              <h4 class="title"> Gary Peters </h4>
+                              <p class="desc">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                              </p>
+                              <span class="date-time">
+                                Jul 07, 11:02 AM
+                              </span>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="notification-footer">
+                          <h5 class="small-text text-center"> See All Notifications </h5>
+                      </div>
+                        <!-- <div class="notification-footer">
+                          <a href="#"> View All Notifications </a>
+                      </div> -->
+                    </div>
                     </a>
                   </li>
                   <li class="header-user-dropdown">
